--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -49,7 +49,7 @@ table a:hover{color:#000;}
 
 #my_reserve{position: absolute;right:0;top:100px;width:400px;}
 #my_reserve_01{position: absolute;right:0;top:300px;width:400px;}
-
+#my_reserve_02{position: absolute;right:0;top:400px;width:400px;}
 
 .nav-in{position: absolute;right:0;top:5px;}
 ul{position: absolute;}
