--- a/app/views/lbbbs/visual.html.erb
+++ b/app/views/lbbbs/visual.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="body_content">	
 	<h3>Section LB BB </h3>
-
+	<br />
 	<table id="visual_lbbb" >
 		<tr>
 			<% @lbbbs_a.each do |lbbb_a| %>
@@ -158,12 +158,13 @@
 		</tr>
 		
 	</table>
+	<br />
 	<%= link_to 'Main Page', { :controller => 'access',:action => 'public' }, :class => 'btn btn-primary' %>
 	<%= link_to 'Back To List', {:action => 'index'}, :class => 'btn btn-primary' %>
 
 	</div><!-- body_content -->
 
-	<div id="my_reserve">
+	<div id="my_reserve_02">
 		<% if session[:username] == 'admin' %>
 			<h3>Reservations for this Section</h3>
 			<table class="table table-striped">
