--- a/app/views/srsaas/index_d.html.erb
+++ b/app/views/srsaas/index_d.html.erb
@@ -18,7 +18,7 @@
     <th>Email</th>
     <th>Paid</th>
     <th>Approved</th>
-    <% if session[:username] == 'superadmin' %>
+    <% if session[:username] == 'admin' %>
         <th></th>
         <th></th>
         <th></th>
@@ -41,7 +41,7 @@
     <% else %>
         <td><%= image_tag('check.png') %></td>
     <% end %>
-    <% if session[:username] == 'superadmin' %>
+    <% if session[:username] == 'admin' %>
         <td><%= link_to 'Show', srsaa %></td>
         <td><%= link_to 'Edit', edit_srsaa_path(srsaa) %></td>
         <td><%= link_to 'Destroy', srsaa, confirm: 'Are you sure?', method: :delete, remote: true %></td>
