--- a/app/views/lbbs/visual.html.erb
+++ b/app/views/lbbs/visual.html.erb
@@ -163,7 +163,7 @@
 
 	</div><!-- body_content -->
 
-	<div id="my_reserve">
+	<div id="my_reserve_02">
 		<% if session[:username] == 'admin' %>
 			<h3>Reservations for this Section</h3>
 			<table class="table table-striped">
