--- a/app/views/srsbvipbs/visual.html.erb
+++ b/app/views/srsbvipbs/visual.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="body_content">	
 	<h3>Section SRS B / VIP B </h3>
-
+	<br />
 	<table id="visual_srsbvipb" >
 		<tr>
 			<% @srsbvipbs_a.each do |srsbvipb_a| %>
@@ -106,7 +106,7 @@
 			<% end %>
 		</tr>
 		
-	</table>
+	</table><br />
 	<%= link_to 'Main Page', { :controller => 'access',:action => 'public' }, :class => 'btn btn-primary' %>
 	<%= link_to 'Back To List', {:action => 'index'}, :class => 'btn btn-primary' %>
 
