--- a/app/views/csas/visual.html.erb
+++ b/app/views/csas/visual.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="body_content">	
 	<h3>Section CS A </h3>
-
+	<br />
 	<table id="visual_csa" >
 		<tr>
 			<% @csas_a.each do |csa_a| %>
@@ -174,13 +174,13 @@
 			<% end %>
 		</tr>
 		
-	</table>
+	</table><br />
 	<%= link_to 'Main Page', { :controller => 'access',:action => 'public' }, :class => 'btn btn-primary' %>
 	<%= link_to 'Back To List', {:action => 'index'}, :class => 'btn btn-primary' %>
 
 	</div><!-- body_content -->
 
-	<div id="my_reserve">
+	<div id="my_reserve_02">
 		<% if session[:username] == 'admin' %>
 			<h3>Reservations for this Section</h3>
 			<table class="table table-striped">
