--- a/app/views/user_mailer/send_mail.html.erb
+++ b/app/views/user_mailer/send_mail.html.erb
@@ -1,8 +1,187 @@
 <p><b><%= @company_name %></b>,</p>
 
-<p>Your Company has <%= @tickets.size %> reservations</p>
+<p>Your Company has <%= @all %> reservations</p>
 
-<% @tickets.each do |ticket| %>
-	<p><%= ticket.ticket_num %> - <%= ticket.main_section %></p>
-<% end %>
+<div class="upperbox">
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section VIP - BB / SRS - BB</th>
+	  </tr>
+	<% @vipbbsrsbbs.each do |my| %>
+	  <tr>
+	    <td><%= my.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section SRS - AA / VIP - AA</th>	   
+	  </tr>
+	<% @srsaavipaas.each do |srsaavipaa| %>
+	  <tr>
+	    <td><%= srsaavipaa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section SRS - AA</th>	   
+	  </tr>
+	<% @srsaas.each do |srsaa| %>
+	  <tr>
+	    <td><%= srsaa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section CS - AA</th>	   
+	  </tr>
+	<% @csaas.each do |csaa| %>
+	  <tr>
+	    <td><%= csaa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section CS - A</th>	   
+	  </tr>
+	<% @csas.each do |csa| %>
+	  <tr>
+	    <td><%= csa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section SRS - A</th>	   
+	  </tr>
+	<% @srsas.each do |srsa| %>
+	  <tr>
+	    <td><%= srsa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section VIP - A / SRS - A</th>	   
+	  </tr>
+	<% @vipasrsas.each do |vipasrsa| %>
+	  <tr>
+	    <td><%= vipasrsa.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<table class="table_email">
+	  <tr>
+	    <th>Section SRS - B / VIP - B</th>	   
+	  </tr>
+	<% @srsbvipbs.each do |srsbvipb| %>
+	  <tr>
+	    <td><%= srsbvipb.ticket_num %></td>
+	  </tr>
+	<% end %>
+	</table>
+	</div>
+
+	<div class="lowerbox">
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - DD</th>	   
+		  </tr>
+		<% @lbdds.each do |lbdd| %>
+		  <tr>
+		    <td><%= lbdd.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>	
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - CC</th>	   
+		  </tr>
+		<% @lbccs.each do |lbcc| %>
+		  <tr>
+		    <td><%= lbcc.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - BB</th>	   
+		  </tr>
+		<% @lbbbs.each do |lbbb| %>
+		  <tr>
+		    <td><%= lbbb.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - AA</th>	   
+		  </tr>
+		<% @lbaas.each do |lbaa| %>
+		  <tr>
+		    <td><%= lbaa.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>	
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - A</th>	   
+		  </tr>
+		<% @lbas.each do |lba| %>
+		  <tr>
+		    <td><%= lba.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - B</th>	   
+		  </tr>
+		<% @lbbs.each do |lbb| %>
+		  <tr>
+		    <td><%= lbb.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - C</th>	   
+		  </tr>
+		<% @lbcs.each do |lbc| %>
+		  <tr>
+		    <td><%= lbc.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+		<table class="table_email">
+		  <tr>
+		    <th>Section LB - D</th>	   
+		  </tr>
+		<% @lbds.each do |lbd| %>
+		  <tr>
+		    <td><%= lbd.ticket_num %></td>
+		  </tr>
+		<% end %>
+		</table>
+
+	</div>
+
 
