--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,5 +25,5 @@
 
 
 <%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-primary'  %>
-<%= link_to 'Back', users_path, :class => 'btn btn-primary' %>
+<%= link_to 'Login', root_path, :class => 'btn btn-primary' %>
 </div>
