--- a/app/views/csaas/visual.html.erb
+++ b/app/views/csaas/visual.html.erb
@@ -181,7 +181,7 @@
 
 	</div><!-- body_content -->
 
-	<div id="my_reserve">
+	<div id="my_reserve" style="width:350px;">
 		<% if session[:username] == 'admin' %>
 			<h3>Reservations for this Section</h3>
 			<table class="table table-striped">
@@ -216,11 +216,28 @@
 					<% if @my_csaas.empty? %>
 						<p>You have no reservation for this section</p>
 					<% else %>
+					<tr>
+						<td>Seat</td>
+						<td>Company</td>
+						<td>Paid</td>
+						<td>Approved</td>
+					</tr>
 					<% @my_csaas.each do |my| %>
 						<tr>
-							<td><%= my.ticket_num %> - <%= my.company_name %></td>
-						</tr>
-					<% end %>
+							<td><%= my.ticket_num %></td>
+							<td><%= my.company_name %></td>
+							<% if my.paid == 'no' %>
+								<td><%= image_tag('cross.png') %></td>
+							<% else %>
+								<td><%= image_tag('check.png') %></td>
+							<% end %>
+							<% if my.approved == 'no' %>
+							 <td><%= image_tag('cross.png') %></td>
+							 <% else %>
+							 	<td><%= image_tag('check.png') %></td>
+							 <% end %>
+								</tr>
+							<% end %>
 					<% end %>
 			</table>
 		<% end %>
