--- a/app/views/patrons/visual.html.erb
+++ b/app/views/patrons/visual.html.erb
@@ -386,12 +386,29 @@
 					<% if @my_patrons.empty? %>
 						<p>You have no reservation for this section</p>
 					<% else %>
-					<% @my_patrons.each do |my| %>
-						<tr>
-							<td><%= my.ticket_num %> - <%= my.company_name %></td>
-						</tr>
-					<% end %>
-					<% end %>
+					<tr>
+                        <td>Seat</td>
+                        <td>Company</td>
+                        <td>Paid</td>
+                        <td>Approved</td>
+                    </tr>
+                    <% @my_patrons.each do |my| %>
+                        <tr>
+                            <td><%= my.ticket_num %></td>
+                            <td><%= my.company_name %></td>
+                            <% if my.paid == 'no' %>
+                                <td><%= image_tag('cross.png') %></td>
+                            <% else %>
+                                <td><%= image_tag('check.png') %></td>
+                            <% end %>
+                            <% if my.approved == 'no' %>
+                             <td><%= image_tag('cross.png') %></td>
+                             <% else %>
+                                <td><%= image_tag('check.png') %></td>
+                             <% end %>
+                                </tr>
+                            <% end %>
+                    <% end %>
 			</table>
 		<% end %>
 	</div>
