--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -71,3 +71,5 @@ h4{margin:10px 0;}
 .table_email{margin-bottom: 10px;}
 
 .lowerbox{position: absolute;right:150px;top: 150px;}
+
+.instructions{width:400px;position:absolute;top:20;right:0;}
