--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,15 @@
 <div class="container">
 	<br/><br/><br/><br/>
+	<div class="instructions">
+		<h3>Instructions:</h3>
+		<p>Django is a high-level Python web application framework designed to support the development of dynamic websites, web applications, and web services. It is designed to promote rapid development and clean, pragmatic design and lets you build high-performing, elegant web applications quickly.Django is a high-level Python web application framework designed to support the development of dynamic websites, web applications, and web services. It is designed to promote rapid development and clean, pragmatic design and lets you build high-performing, elegant web applications quickly.</p>
+	</div>
 	<h1>Sign Up</h1>
 	<br/>
 	<%= render 'form' %>
 
 	<%= link_to 'Back', users_path %>
+
+
+
 </div>
