--- a/app/views/access/public.html.erb
+++ b/app/views/access/public.html.erb
@@ -93,5 +93,36 @@
 			</tr>
 		</table>	
 	</div>
+
+	<div class="instruct" style="margin-left:20px;">
+
+		<p><b>Online Ticket Reservation</b> </br>
+-  We have automated the ticket reservation this year.</br> This is to give equal opportunity to everyone to avail of their preferred seats. </br>
+-  Ticket price is at PhP 350 (same price as ICONS 2011)</br> 
+-   ONLINE RESERVATION LINK  http://hrcc-icons.herokuapp.com</p>
+</br></br>
+
+		<p>
+			<b><u> Important Reminders Regarding Ticket Reservation</u></b></br> 
+1.   Ticket reservation will be a FIRST COME, FIRST SERVE BASIS </br>
+2.   For reserved seats, a reservation fee of  PhP 3,500.00 should be settled by your company. Sales invoices will be sent to your</br>    
+      company after you have to submitted the online reservation form (2-3 working days).   </br>
+3.  There is a 10-day holding period for reserved seats.  Failure to settle the amount for reserved seats will forfeit  your chance to </br>
+      refund the PhP 3,500 reservation fee and your reserved seats will be released to other companies.  </br>     
+4.  The online diagram of the seat layout of Cuneta Astrodome is subject to updating.  However seat reservations are real time. To</br> 
+     address this limitation, we will provide an updated layout of the venue indicating reserved seats every Friday of each week </br>
+    (starting this Friday).  You may also call us to inquire regarding the available seats in the venue. 
+		</p>
+
+
+	</br></br>
+	<p><b>ONLINE REGISTRATION STEPS</b> </br>
+ 1.SIGN UP </br>
+2. RESERVE SEATS </br>
+3. SUBMIT ONLINE RESERVATION FORM </br>
+4. SETTLE RESERVATION FEE (Sales invoice from PeopleSparx, Inc.) </br>
+5. PAY RESERVED SEATS AMOUNT</br> 
+6. CONFIRMED RESERVATION </p>
+	</div>
 </div>
 
